objects/Migration_Log__c.object
<CustomObject>
    <fields>
        <fullName>Data_Result__c</fullName>
        <label>Data Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Migration Job</label>
        <referenceTo>Migration_Job__c</referenceTo>
        <relationshipLabel>Migration Logs</relationshipLabel>
        <relationshipName>Migration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Credential</label>
        <referenceTo>Settings__c</referenceTo>
        <relationshipLabel>Migration Logs</relationshipLabel>
        <relationshipName>Migration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>errorMessage__c</fullName>
        <label>errorMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idFromTarget__c</fullName>
        <label>idFromTarget</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Migration Log</label>
    <nameField>
        <displayFormat>ML-{00000}</displayFormat>
        <label>Migration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>